Ensure only one socket Different way to start process